# charm

./: README.md  pyproject.toml
charm/: param.py
charm/functions/: __init__.py  make_log_likelihood.py  make_log_prior_transform.py  run_sampler.py  sampler.py
charm/models/: __init__.py  afl.py  ring.py
examples/: params.py  plot 3D geometry.py  plot afl time series.py  plot corner.py  plot posterior time series.py  run sampler.py
examples/extract afl parameters/: params.py  plot corner.py  run sampler.py
